# gpx_track_neighborhood

./: .gitignore  0-simplify-tracks.py  1-gpx2postgis.py  1-proximity-calc.py  2-export-geojson.py  2-proximity-calc.py  3-category-calc.py  4-export-geojson.py  MODES.md  README.md  TODO.txt  category_calc.py  delete-track.py  export_geojson.py  frequency_calc.py  gpx2postgis.py  gpx2postgres.py  initdb.py  list-tracks.py  requirements.txt  simplify_tracks.py  sql_1_expand_tracks.sql  sql_2_create_circles.sql  sql_31_get_track_fid.sql  sql_32_calcfreq_template.sql
archive/: ogrtest.py  recreatedb.bat  sqlcollection.sql
gpx2db_pkg/: setup.py
python/: setup.cfg
python/src/gpx2db/: Transform.py  delete_track.py  export_geojson.py  gpx2dblib.py  gpx2postgres.py  gpximport.py  initdb.py  initdb_proximator.py  list_tracks.py  proximity_calc.py  utils.py
python/src/gpx2db/sql/: delete-track-base.sql  delete-track-extended.sql
python/src/gpx2db/sql/initdb/: 100_create_meta_schema.sql  110_create_sid_schema_table.sql
python/src/gpx2db/sql/proximity-calc/: 0100_create_newpoints_table.sql  0100_joinsegments_create_newpoints.sql  0200_create_segments_table.sql  0250_insert_enriched_points.sql  0300_insert_segments.sql  0400_create_segments_table_idx.sql  1000_cr_intersections_table.sql  1200_create_intersect_table_idx.sql  1300_create_circles_table.sql  1310_insert_circles.sql  2000_insert_intersections.sql  3000_view_gtype.sql  3100_view_ml_debug.sql  3200_view_count_ml_consecutive.sql  3300_view_count_linestrings.sql  3400_view_count_circle_freq_all.sql  4000_calc_categories.sql  4000_create_freq_table.sql  4100_create_category_table.sql  4300_calc_categories.sql
python/src/scripts/: delete-track.py  gpx2postgres.py  initdb_proximator.py
python/tests/: conftest.py  print_profiling.py  test_gpx2db.py  test_initdb.py  test_proximator.py  test_proximator_mock.py  test_proximator_realdb.py  test_standard_realdb.py
python/tests/test_data/: file1.gpx  file2.gpx
(+67 files in other folders)
