[metadata]
name = gpackage
version = 1.2
author = El Fu
;author_email = artfu@example.com
;description = A small example package
;long_description = file: README.md
;long_description_content_type = text/markdown
;url = https://github.com/pypa/sampleproject
;project_urls =
;    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent


[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
  gpxpy == 1.4.2
  psycopg2 >= 2.8.6
  pytest
  flake8
  pytest-cov

[options.entry_points]
console_scripts =
    initdb = gpx2db.initdb:main
    initdb_proximator = gpx2db.initdb_proximator:main
    proximity_calc = gpx2db.proximity_calc:main
    export_geojson = gpx2db.export_geojson:main
    gpx2postgres = gpx2db.gpx2postgres:main
    list_tracks = gpx2db.list_tracks:main
    delete_track = gpx2db.delete_track:main

[options.packages.find]
where = src

